--- a/src/app/pages/event-create/event-create.page.html
+++ b/src/app/pages/event-create/event-create.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title> New Event </ion-title>
+    <ion-title> New concert </ion-title>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
@@ -11,7 +11,7 @@
 <ion-content class="ion-padding">
   <ion-list>
     <ion-item>
-      <ion-input label="Event Name" [(ngModel)]="eventName" type="text" placeholder="What's your event's name?"></ion-input>
+      <ion-input label="concert Name" [(ngModel)]="eventName" type="text" placeholder="What's your concert's name?"></ion-input>
     </ion-item>
     <ion-item>
       <ion-input label="Price" [(ngModel)]="eventPrice" type="text" placeholder="How much will guests pays?"></ion-input>
@@ -20,13 +20,13 @@
         <ion-input label="Cost" [(ngModel)]="eventCost" type="text" placeholder="How much are you spending?"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">Event Date</ion-label>
+        <ion-label position="stacked">concert Date</ion-label>
         <ion-datetime [(ngModel)]="currentDate" presentation="date" display-format="D, MM, YY" picker-format="DD MM YYYY"
-        min="2017" max="2023-12-31" [value]="currentDate" value="2022-04-21T00:00:00" ></ion-datetime>
+        min="2017" max="2024-12-31" [value]="currentDate" value="2022-04-21T00:00:00" ></ion-datetime>
 
       </ion-item>
       <ion-button (click)="createEvent(eventName, eventPrice, eventCost, currentDate)" expand="block" color="primary">
-        Create Event
+        Create concert
         </ion-button>
   </ion-list>
 </ion-content>
