--- a/src/app/pages/event-list/event-list.page.html
+++ b/src/app/pages/event-list/event-list.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title> Your Events </ion-title>
+    <ion-title> Your concerts </ion-title>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
@@ -10,7 +10,7 @@
 <ion-content [fullscreen]="true">
   <ion-list>
     <ion-list-header>
-      | <ion-label>Your next events</ion-label>
+      | <ion-label>Your next concerts</ion-label>
     </ion-list-header>
     <ion-item tappable *ngFor="let event of eventList" routerLink="/event-detail/{{event.id}}">
       <ion-label>
